fix: in gridview configure link in name on desktop and hide on mobile (#173)
* fix: links reactivated

* fix: disabled links through mobile breakpoints

--- a/themes/default/css/template.css
+++ b/themes/default/css/template.css
@@ -702,8 +702,10 @@ body > .container-fluid.documentation {
     }
     #logo-menu{
         margin-left: 10px;
+    } 
+    .link-update-grid-view a{
+        pointer-events: none;
     }
-
  }
 
 #menu .profile {
